[package]
name = "u64viewer"
authors = ["Alexander <sanderv32@gmail.com>"]
version = "0.1.0-git"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "u64viewer"
path = "src/main.rs"

[lints.clippy]
pedantic = "deny"
mem_forget = "deny"

[dependencies]
minifb = "0.28"
tokio = { version = "1.48", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
socket2 = { version = "0.6.1", features = ["all"] }
zerocopy = { version = "0.8.31", features = ["derive"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
cpal = "0.17.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
